--- a/angular.json
+++ b/angular.json
@@ -71,6 +71,10 @@
         },
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
+          "options":{
+            "host":"65.108.218.104",
+            "port":4200
+            },
           "configurations": {
             "production": {
               "browserTarget": "charproject:build:production"
